--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,33 +54,6 @@ h5 {
   .c-eventview .c-eventview-statusbar .c-usermessage {
     margin: 5px 0; }
 
-.c-eventview .c-eventview-weekpicker--callout .ms-DatePicker-day--today {
-  background-color: inherit !important;
-  color: inherit !important;
-  font-weight: inherit !important;
-  border: none !important;
-  outline: none !important; }
-
-.c-eventview .c-eventview-weekpicker--callout .ms-DatePicker-day--highlighted {
-  background-color: inherit !important;
-  color: inherit !important;
-  font-weight: inherit !important;
-  border: none !important;
-  outline: none !important; }
-  .c-eventview .c-eventview-weekpicker--callout .ms-DatePicker-day--highlighted button {
-    background-color: inherit !important;
-    color: inherit !important;
-    font-weight: inherit !important;
-    border: none !important;
-    outline: none !important; }
-
-.c-eventview .c-eventview-weekpicker--callout table tbody tr:hover td {
-  background: #f3f2f1 !important;
-  color: #201f1e !important; }
-
-.c-eventview .c-eventview-weekpicker--callout table tbody tr:hover * {
-  cursor: pointer !important; }
-
 .c-eventview .ms-List-cell .ms-DetailsRow {
   min-height: 53px; }
   .c-eventview .ms-List-cell .ms-DetailsRow .ms-DetailsRow-cell > span,
@@ -93,6 +66,33 @@ h5 {
   width: 540px;
   min-width: 540px;
   max-width: 540px; }
+
+.c-eventview-weekpicker--callout .ms-DatePicker-day--today {
+  background-color: inherit !important;
+  color: inherit !important;
+  font-weight: inherit !important;
+  border: none !important;
+  outline: none !important; }
+
+.c-eventview-weekpicker--callout .ms-DatePicker-day--highlighted {
+  background-color: inherit !important;
+  color: inherit !important;
+  font-weight: inherit !important;
+  border: none !important;
+  outline: none !important; }
+  .c-eventview-weekpicker--callout .ms-DatePicker-day--highlighted button {
+    background-color: inherit !important;
+    color: inherit !important;
+    font-weight: inherit !important;
+    border: none !important;
+    outline: none !important; }
+
+.c-eventview-weekpicker--callout table tbody tr:hover td {
+  background: #f3f2f1 !important;
+  color: #201f1e !important; }
+
+.c-eventview-weekpicker--callout table tbody tr:hover * {
+  cursor: pointer !important; }
 
 .c-projectdetails {
   margin-top: 30px; }
