switched from dev logo to beta logo

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
   <div className="container">
     <div className="row">
       <div className="col-sm">
-        <center><img src="/images/did365logodev.png" width="175px">
+        <center><img src="/images/did365logobeta.png" width="175px">
         <p><i>The Calendar is the Timesheet</i></p>
         </center>
       </div>
