--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "../client/components/EventView/EventView.scss";
 @import "../client/components/Projects/Projects.scss";
 @import "../client/components/UserMessage/UserMessage.scss";
+@import "../client/components/UserAllocation/UserAllocation.scss";
 
 
 .ms-DetailsRow-check,
