--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,8 +1,9 @@
 body {
-  padding-top: 4.5rem;
+  padding-top: 20px;
+  margin-top: 63px;
   font-family: "Segoe UI Light", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto,
     "Helvetica Neue", sans-serif;
-  font-size: 14px;
+  font-size: 100%;
 }
 
 .alert-pre {
@@ -12,29 +13,29 @@ body {
 }
 
 .navbar-nav .nav-link {
-  font-size: 10pt;
+  font-size: 1em;
   letter-spacing: 1px;
 }
 
 h1 {
-  font-size: 36pt;
+  font-size: 3em;
   margin: 15px 0 15px 0;
 }
 
 h2 {
-  font-size: 24pt;
+  font-size: 2.2em;
   margin: 15px 0 15px 0;
 }
 
 h3 {
-  font-size: 18pt;
+  font-size: 1.8em;
   margin: 15px 0 15px 0;
 }
 
 h4 {
-  font-size: 14pt;
+  font-size: 1.4em;
 }
 
 h5 {
-  font-size: 10pt;
+  font-size: 1.2em;
 }
