--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,6 +46,35 @@ h5 {
   margin: 0;
   padding: 0; }
 
+#app-admin .react-autosuggest__container {
+  position: relative; }
+
+#app-admin .react-autosuggest__input--focused {
+  outline: none; }
+
+#app-admin .react-autosuggest__suggestions-container {
+  display: none; }
+
+#app-admin .react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 35px;
+  width: 300px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 2; }
+
+#app-admin .react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none; }
+
+#app-admin .react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px; }
+
 .c-eventview .c-eventview-actions {
   margin: 10px 0 10px 0; }
 
