--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./layout.scss";
 @import "./react-autosuggest.scss";
+@import "../client/components/AdminView/AdminView.scss";
 @import "../client/components/Timesheet/Timesheet.scss";
 @import "../client/components/Projects/Projects.scss";
 @import "../client/components/UserMessage/UserMessage.scss";
