--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -37,8 +37,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">
-                        {{#if user.avatar}}
-                        <img src="{{ user.avatar }}" class="rounded-circle align-self-center mr-2" style="width: 32px;">
+                        {{#if user.photo}}
+                        <img src="data:image/jpg;base64,{{ user.photo }}" class="rounded-circle align-self-center mr-2" style="width: 32px;">
                         {{else}}
                         <i class="far fa-user-circle fa-lg rounded-circle align-self-center mr-2"
                             style="width: 32px;"></i>
