--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -37,8 +37,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">
-                        {{#if user.avatar}}
-                        <img src="{{ user.avatar }}" class="rounded-circle align-self-center mr-2" style="width: 32px;">
+                        {{#if user.email}}
+                        <img src="https://outlook.office365.com/owa/service.svc/s/GetPersonaPhoto?email={{ user.email }}&UA=0&size=HR64x64&sc=1468233338850" class="rounded-circle align-self-center mr-2" style="width: 32px;">
                         {{else}}
                         <i class="far fa-user-circle fa-lg rounded-circle align-self-center mr-2"
                             style="width: 32px;"></i>
