--- a/client/components/Timesheet/Timesheet.scss
+++ b/client/components/Timesheet/Timesheet.scss
@@ -1,12 +1,12 @@
-.c-eventview {
-  .c-eventview-actions {
+.c-Timesheet {
+  .c-Timesheet-actions {
     margin: 10px 0 10px 0;
   }
 
-  .c-eventview-statusbar {
+  .c-Timesheet-statusbar {
     min-height: 40px;
 
-    .c-usermessage {
+    .c-UserMessage {
       margin: 5px 0;
     }
   }
@@ -52,7 +52,7 @@
   max-width: 540px;
 }
 
-.c-eventview-weekpicker--callout {
+.c-Timesheet-weekpicker--callout {
   .ms-DatePicker-day--today {
     background-color: inherit !important;
     color: inherit !important;
