--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./react-autosuggest.scss";
 @import "../client/components/AdminView/AdminView.scss";
 @import "../client/components/Timesheet/Timesheet.scss";
+@import "../client/components/Timesheet/SummaryView/SummaryView.scss";
 @import "../client/components/Projects/Projects.scss";
 @import "../client/components/UserMessage/UserMessage.scss";
 @import "../client/components/UserAllocation/UserAllocation.scss";
