--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "../client/components/AdminView/AdminView.scss";
 @import "../client/components/Timesheet/Timesheet.scss";
 @import "../client/components/Timesheet/SummaryView/SummaryView.scss";
+@import "../client/components/Timesheet/EventList/ProjectColumn/ProjectColumn.scss";
 @import "../client/components/Timesheet/ActionBar/WeekPicker/WeekPicker.scss";
 @import "../client/components/Projects/Projects.scss";
 @import "../client/components/UserMessage/UserMessage.scss";
