--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -23,7 +23,7 @@
                     <a href="/projects" class="nav-link{{#if active.projects}} active{{/if}}">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/faq" class="nav-link{{#if active.faq}} active{{/if}}">FAQ</a>
+                    <a href="/reports" class="nav-link{{#if active.reports}} active{{/if}}">Reports</a>
                 </li>
                 {{#if user.isAdmin }}
                     <li class="nav-item">
