Enrollment of users

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,6 +76,16 @@ h5 {
   cursor: pointer;
   padding: 10px 20px; }
 
+.c-AdminView-userFormModal {
+  padding: 20px;
+  min-width: 450px; }
+  .c-AdminView-userFormModal .c-AdminView-userFormModal-title {
+    font-size: 1.6em;
+    margin: 0 0 12px 0; }
+  .c-AdminView-userFormModal .c-AdminView-userFormModal-saveBtn {
+    width: 100%;
+    margin: 8px 0 0 0; }
+
 .c-Timesheet .c-Timesheet-actions {
   margin: 10px 0 10px 0; }
 
