Misc improvements for Admin (#158)
- Reports: Showing progressindicator when loading
- Admin: Enrollment of users and edit current users
- AdminView: Removed unused imports

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "./theme.scss";
 @import "./react-autosuggest.scss";
 @import "../client/components/AdminView/AdminView.scss";
+@import "../client/components/AdminView/Users/UserFormModal/UserFormModal.scss";
 @import "../client/components/Timesheet/Timesheet.scss";
 @import "../client/components/Timesheet/SummaryView/SummaryView.scss";
 @import "../client/components/Timesheet/EventList/ProjectColumn/ProjectColumn.scss";
