--- a/client/components/Label/Label.scss
+++ b/client/components/Label/Label.scss
@@ -1,6 +1,8 @@
 .c-Label {
+  display: inline-block;
   padding: 4px 8px;
-  font-size: 14px;
+  margin: 0 4px 0 0;
+  font-size: 1em;
   font-weight: 600;
   border-radius: 3px;
   transition: opacity 0.2s linear;
