Added labels to customer list

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -213,6 +213,8 @@ h5 {
 
 .c-ProjectDetails {
   margin-top: 30px; }
+  .c-ProjectDetails .c-ProjectDetails-labels {
+    text-align: end; }
 
 .c-UserMessage p {
   word-break: break-word;
