--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "../client/components/Timesheet/EventList/ProjectColumn/ProjectColumn.scss";
 @import "../client/components/Timesheet/ActionBar/WeekPicker/WeekPicker.scss";
 @import "../client/components/Projects/ProjectDetails/ProjectDetails.scss";
+@import "../client/components/Customers/CustomerDetails/CustomerDetails.scss";
 @import "../client/components/UserMessage/UserMessage.scss";
 @import "../client/components/UserAllocation/UserAllocation.scss";
 
