Added component LabelFormModal

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "../client/components/Label/Label.scss";
 @import "../client/components/AdminView/AdminView.scss";
 @import "../client/components/AdminView/Users/UserFormModal/UserFormModal.scss";
+@import "../client/components/AdminView/Labels/LabelFormModal/LabelFormModal.scss";
 @import "../client/components/Timesheet/Timesheet.scss";
 @import "../client/components/Timesheet/SummaryView/SummaryView.scss";
 @import "../client/components/Timesheet/EventList/ProjectColumn/ProjectColumn.scss";
