--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,6 +95,16 @@ h5 {
     width: 100%;
     margin: 8px 0 0 0; }
 
+.c-AdminView-labelFormModal {
+  padding: 20px;
+  min-width: 450px; }
+  .c-AdminView-labelFormModal .c-AdminView-labelFormModal-title {
+    font-size: 1.6em;
+    margin: 0 0 12px 0; }
+  .c-AdminView-labelFormModal .c-AdminView-labelFormModal-saveBtn {
+    width: 100%;
+    margin: 8px 0 0 0; }
+
 .c-Timesheet .c-Timesheet-actions {
   margin: 10px 0 10px 0; }
 
