--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,15 +47,6 @@ h5 {
   margin: 0;
   padding: 0; }
 
-.c-EntityLabel {
-  display: inline-block;
-  padding: 4px 8px;
-  margin: 0 4px 0 0;
-  font-size: 0.8em;
-  font-weight: 600;
-  border-radius: 3px;
-  transition: opacity 0.2s linear; }
-
 .c-AdminView .react-autosuggest__container {
   position: relative; }
 
@@ -94,18 +85,6 @@ h5 {
   .c-AdminView-userFormModal .c-AdminView-userFormModal-saveBtn {
     width: 100%;
     margin: 8px 0 0 0; }
-
-.c-AdminView-labelFormModal {
-  padding: 20px;
-  min-width: 450px; }
-  .c-AdminView-labelFormModal .c-AdminView-labelFormModal-title {
-    font-size: 1.6em;
-    margin: 0 0 12px 0; }
-  .c-AdminView-labelFormModal .c-AdminView-labelFormModal-saveBtn {
-    width: 100%;
-    margin: 8px 0 0 0; }
-  .c-AdminView-labelFormModal .c-AdminView-labelFormModal-colorPicker {
-    position: relative; }
 
 .c-Timesheet .c-Timesheet-actions {
   margin: 10px 0 10px 0; }
@@ -223,15 +202,8 @@ h5 {
     border: none !important;
     outline: none !important; }
 
-.c-ProjectDetails {
+.c-projectdetails {
   margin-top: 30px; }
-  .c-ProjectDetails .c-ProjectDetails-labels {
-    text-align: end; }
-
-.c-CustomerDetails {
-  margin-top: 30px; }
-  .c-CustomerDetails .c-CustomerDetails-labels {
-    text-align: end; }
 
 .c-UserMessage p {
   word-break: break-word;
