--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,8 +202,12 @@ h5 {
     border: none !important;
     outline: none !important; }
 
-.c-projectdetails {
+.c-ProjectDetails {
   margin-top: 30px; }
+
+.c-ConfirmDeleteDialog {
+  min-width: 500px;
+  max-width: 500px; }
 
 .c-UserMessage p {
   word-break: break-word;
