--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -49,7 +49,7 @@
                         <p class="dropdown-item-text text-muted mb-0" style="font-size:12px;">{{ user.email }}</p>
                         <div class="dropdown-divider"></div>
                         <p class="dropdown-item-text text-muted mb-0" style="font-size:12px;">{{ user.role }}
-                            ({{ user.sub }})</p>
+                            ({{ user.sub.name }})</p>
                         <div class="dropdown-divider"></div>
                         <a href="/auth/signout" class="dropdown-item" style="font-size:12px;">Sign out of Office 365</a>
                     </div>
