Temp chart for remaining vacation

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,14 @@
     <div className="row">
       <div className="col-sm">
         <center><img src="/images/did365logobeta.png" width="175px">
-        <p><i>The Calendar is the Timesheet</i></p>
+          <p><i>The Calendar is the Timesheet</i></p>
+        </center>
+      </div>
+    </div>
+    <div className="row">
+      <div className="col-sm">
+        <center>
+          <div id="app-vacation-status"></div>
         </center>
       </div>
     </div>
