Including UserNotifications scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import "../client/components/Projects/ProjectDetails/ProjectDetails.scss";
 @import "../client/components/Customers/CustomerList/ConfirmDeleteDialog/ConfirmDeleteDialog.scss";
 @import "../client/components/UserAllocation/UserAllocation.scss";
+@import "../client/components/UserNotifications/UserNotifications.scss";
 @import "../client/components/Projects/CreateProjectForm/SearchCustomer/SearchCustomer.scss";
 
 button:focus {
