--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,8 @@
   <main role="main" class="container">
     {{{body}}}
   </main>
-  <script src="/js/did365.js"></script>
+  <script src="/js/vendors~did365.js"></script>
+  <script src="/js/did365.js?v={{package.version}}"></script>
 </body>
 
 </html>
