Misc updates to typedoc-theme

--- a/typedoc-theme/assets/css/elements/_navigation.sass
+++ b/typedoc-theme/assets/css/elements/_navigation.sass
@@ -40,7 +40,7 @@
 //
 // <nav class="tsd-navigation primary">
 //   <ul>
-//     <li class="globals"><a href="#"><em>Globals</em></a></li>
+//     <li class="globals"><a href="#"><em>Home</em></a></li>
 //     <li class="current tsd-kind-container">
 //       <a href="#">TypeDoc</a>
 //       <ul>
