--- a/typedoc-theme/partials/type.hbs
+++ b/typedoc-theme/partials/type.hbs
@@ -1,4 +1,4 @@
-{{! Each type gets its own inline helper to determine how it is rendered. }}
+REPORTS_FILTERS{{! Each type gets its own inline helper to determine how it is rendered. }}
 {{! The name of the helper is the value of the 'type' property on the type.}}
 
 {{!
