--- a/typedoc-theme/partials/type.hbs
+++ b/typedoc-theme/partials/type.hbs
@@ -1,4 +1,4 @@
-REPORTS_FILTERS{{! Each type gets its own inline helper to determine how it is rendered. }}
+{{! Each type gets its own inline helper to determine how it is rendered. }}
 {{! The name of the helper is the value of the 'type' property on the type.}}
 
 {{!
