--- a/bin/views/layout.hbs
+++ b/bin/views/layout.hbs
@@ -10,8 +10,7 @@
   <main role='main' class='container'>
     {{{body}}}
   </main>
-  <script src='/js/vendors~did365.js?v={{package.version}}'></script>
-  <script src='/js/did365.js?v={{package.version}}'></script>
+  <script src='/js/did365.js'></script>
 </body>
 
 </html>
