--- a/bin/views/index.hbs
+++ b/bin/views/index.hbs
@@ -4,6 +4,7 @@
       <div className="col-sm">
         <center><img src="/images/did365logobeta.png" width="175px">
         <p><i>The Calendar is the Timesheet</i></p>
+        {{user}}
         </center>
       </div>
     </div>
