--- a/bin/views/layout.hbs
+++ b/bin/views/layout.hbs
@@ -10,6 +10,8 @@
   <main role='main' class='container'>
     {{{body}}}
   </main>
+  
+  <script src='/js/vendors~did365.js'></script>
   <script src='/js/did365.js'></script>
 </body>
 
