--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./layout.scss";
 @import "./theme.scss";
 @import "./react-autosuggest.scss";
+@import "../client/common/components/HotkeyModal/HotkeyModal.scss";
 @import "../client/common/components/UserMessage/UserMessage.scss";
 @import "../client/common/components/UserAllocation/UserAllocation.scss";
 @import "../client/pages/Admin/Users/UserFormModal/UserFormModal.scss";
