--- a/client/components/Admin/Users/UserFormModal/UserFormModal.scss
+++ b/client/components/Admin/Users/UserFormModal/UserFormModal.scss
@@ -1,13 +1,13 @@
-.c-AdminView-userFormModal {
+.c-Admin-userFormModal {
   padding: 20px;
   min-width: 450px;
 
-  .c-AdminView-userFormModal-title {    
+  .c-Admin-userFormModal-title {    
     font-size: 1.6em;
     margin: 0 0 12px 0;
   }
 
-  .c-AdminView-userFormModal-saveBtn {
+  .c-Admin-userFormModal-saveBtn {
     width: 100%;
     margin: 8px 0 0 0;
   }
