--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,8 +9,8 @@
   <main role='main' class='container'>
     {{{body}}}
   </main>
-  <script src='/js/vendors~did365.js?v={{package.version}}'></script>
-  <script src='/js/did365.js?v={{package.version}}'></script>
+  <script src='/js/vendors~did365.js?v={{version}}'></script>
+  <script src='/js/did365.js?v={{version}}'></script>
 </body>
 
 </html>
