--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,3 +1,8 @@
+@media screen and (min-width: 960px) {
+  html {
+     overflow-y: scroll;
+  }
+}
 body {
   padding-top: 20px;
   margin-top: 63px;
