--- a/client/common/components/EventList/ProjectColumn/ProjectColumn.scss
+++ b/client/common/components/EventList/ProjectColumn/ProjectColumn.scss
@@ -6,6 +6,10 @@
     display: inline-block;
   }
 
+  .c-Timesheet-projectColumn-content-icon {
+    margin: 0 0 0 6px;
+  }
+
   .c-Timesheet-projectColumn-content-subText {
     font-size: 7pt;
   }
@@ -20,23 +24,27 @@
 .c-Timesheet-projectColumn-tooltip {
   margin: 0;
   min-width: 200px;
-  
+
   .c-Timesheet-projectColumn-tooltip-title {
     font-size: 13pt;
     margin: 0;
   }
-  
+
   .c-Timesheet-projectColumn-tooltip-subTitle {
     font-size: 8pt;
     margin: 0 0 10px 0;
   }
-  
-  .c-Timesheet-projectColumn-tooltip-description {    
+
+  .c-Timesheet-projectColumn-tooltip-description {
     font-size: 8pt;
     margin: 4px 0 10px 0;
   }
-  
-  .c-Timesheet-projectColumn-tooltip-tag {    
+
+  .c-Timesheet-projectColumn-tooltip-labels {
+    margin: 4px 0 10px 0;
+  }
+
+  .c-Timesheet-projectColumn-tooltip-tag {
     font-size: 9pt;
     font-weight: 600;
   }
