--- a/client/common/components/UserAllocation/UserAllocation.module.scss
+++ b/client/common/components/UserAllocation/UserAllocation.module.scss
@@ -1,8 +1,8 @@
-.c-UserAllocation {
-    .c-UserAllocation-chart {
+.root {
+    .chart {
         margin-top: 30px;
 
-        .c-UserAllocation-chart-title {
+        .title {
             font-size: 18pt;
             margin: 0 0 18px 0;
         }
