--- a/client/pages/Admin/Users/UserFormModal/UserFormModal.module.scss
+++ b/client/pages/Admin/Users/UserFormModal/UserFormModal.module.scss
@@ -1,13 +1,13 @@
-.c-Admin-userFormModal {
+.root {
   padding: 20px;
   min-width: 450px;
 
-  .c-Admin-userFormModal-title {    
+  .title {    
     font-size: 1.6em;
     margin: 0 0 12px 0;
   }
 
-  .c-Admin-userFormModal-saveBtn {
+  .saveBtn {
     width: 100%;
     margin: 8px 0 0 0;
   }
