--- a/client/pages/Timesheet/ActionBar/WeekPicker/WeekPicker.module.scss
+++ b/client/pages/Timesheet/ActionBar/WeekPicker/WeekPicker.module.scss
@@ -1,4 +1,4 @@
-.c-Timesheet-weekPicker {
+.root {
   margin-top: 0;
   &:hover {
     input {
@@ -6,7 +6,7 @@
       color: rgb(32, 31, 30);
     }
   }
-  .ms-TextField-fieldGroup {
+  [class*="ms-TextField-fieldGroup"] {
     height: 44px;
 
     i {
@@ -18,8 +18,8 @@
   }
 }
 
-.c-Timesheet-weekpicker--callout {
-  .ms-DatePicker-day--today {
+.callout {
+  [class*="ms-DatePicker-day--today"] {
     background-color: inherit !important;
     color: inherit !important;
     font-weight: inherit !important;
@@ -27,7 +27,7 @@
     outline: none !important;
   }
 
-  .ms-DatePicker-day--highlighted {
+  [class*="ms-DatePicker-day--highlighted"] {
     background-color: inherit !important;
     color: inherit !important;
     font-weight: inherit !important;
