--- a/client/pages/Timesheet/ProjectColumn/ProjectColumn.module.scss
+++ b/client/pages/Timesheet/ProjectColumn/ProjectColumn.module.scss
@@ -1,42 +1,42 @@
-.c-Timesheet-projectColumn {
+.root {
   width: 100%;
 
-  .c-Timesheet-projectColumn-content {
+  .content {
     vertical-align: top;
     display: inline-block;
   }
 
-  .c-Timesheet-projectColumn-content-subText {
+  .subText {
     font-size: 7pt;
   }
 
-  .c-Timesheet-projectColumn-clearButton {
+  .clearButton {
     vertical-align: top;
     display: inline-block;
     margin: 0 0 0 4px;
   }
 }
 
-.c-Timesheet-projectColumn-tooltip {
+.tooltip {
   margin: 0;
   min-width: 200px;
   
-  .c-Timesheet-projectColumn-tooltip-title {
+  .title {
     font-size: 13pt;
     margin: 0;
   }
   
-  .c-Timesheet-projectColumn-tooltip-subTitle {
+  .subTitle {
     font-size: 8pt;
     margin: 0 0 10px 0;
   }
   
-  .c-Timesheet-projectColumn-tooltip-description {    
+  .description {    
     font-size: 8pt;
     margin: 4px 0 10px 0;
   }
   
-  .c-Timesheet-projectColumn-tooltip-tag {    
+  .tag {    
     font-size: 9pt;
     font-weight: 600;
   }
