--- a/client/pages/Timesheet/ProjectColumn/ResolveProjectModal/ResolveProjectModal.module.scss
+++ b/client/pages/Timesheet/ProjectColumn/ResolveProjectModal/ResolveProjectModal.module.scss
@@ -1,11 +1,14 @@
 .root {
-    padding: 20px;
-    width: 540px;
-    min-width: 540px;
-    max-width: 540px;
-  
-    .title {
-      font-size: 1.6em;
-      margin: 0 0 12px 0;
-    }
+  padding: 20px;
+  width: 540px;
+  min-width: 540px;
+  max-width: 540px;
+
+  .title {
+    font-size: 1.6em;
+    margin: 0 0 12px 0;
   }
+  .searchProject {
+    margin: 10px 0 0 0;
+  }
+}
