--- a/client/_global.scss
+++ b/client/_global.scss
@@ -1,65 +1,79 @@
 @media screen and (min-width: 960px) {
-  html {
-    overflow-y: scroll;
-  }
+    html {
+        overflow-y: scroll;
+    }
 }
+
 body {
-  font-family: "Segoe UI Light", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif;
-  font-size: 100%;
-  margin: 0;
-  padding: 0;
+    font-family: "Segoe UI Light", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto,
+        "Helvetica Neue", sans-serif;
+    font-size: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color:#007bff;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+a:visited {
+    color: #007bff;
 }
 
 h1 {
-  font-size: 3em;
-  margin: 15px 0 15px 0;
+    font-size: 3em;
+    margin: 15px 0 15px 0;
 }
 
 h2 {
-  font-size: 2.2em;
-  margin: 15px 0 15px 0;
+    font-size: 2.2em;
+    margin: 15px 0 15px 0;
 }
 
 h3 {
-  font-size: 1.8em;
-  margin: 15px 0 15px 0;
+    font-size: 1.8em;
+    margin: 15px 0 15px 0;
 }
 
 h4 {
-  font-size: 1.4em;
+    font-size: 1.4em;
 }
 
 h5 {
-  font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 .truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .react-autosuggest__suggestion-match {
-  color: #007bff;
+    color: #007bff;
 }
 
 .react-autosuggest__container {
-  width: 100%;
-  max-height: 400px;
+    width: 100%;
+    max-height: 400px;
 }
 
 .react-autosuggest__input {
-  width: 100%;
-  padding: 4px;
+    width: 100%;
+    padding: 4px;
 }
 
 .react-autosuggest__suggestions-container ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 button:focus {
-  outline: none;
+    outline: none;
 }
