--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,15 +2,16 @@
 <html>
 
 <head>
-  {{> head}}
+    <title>Did 365</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <main role='main' class='container'>
-    {{{body}}}
-  </main>
-  <script src='/js/vendors~did365.js?v={{version}}'></script>
-  <script src='/js/did365.js?v={{version}}'></script>
+    <main role='main' class='container'>
+        {{{body}}}
+    </main>
+    <script src='/js/vendors~did365.js?v={{version}}'></script>
+    <script src='/js/did365.js?v={{version}}'></script>
 </body>
 
 </html>
