Cleaned up home

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <main role='main' class='container'>
+    <main role='main'>
         {{{body}}}
     </main>
     <script src='/js/vendors~did365.js?v={{version}}'></script>
