--- a/client/common/components/Navigation/Navigation.module.scss
+++ b/client/common/components/Navigation/Navigation.module.scss
@@ -8,76 +8,74 @@
         margin: auto;
         display: flex;
         height: 100%;
-    }
 
-    @media (min-width: 576px) {
-        .container {
+        @media (min-width: 576px) {
             max-width: 540px;
         }
-    }
 
-    @media (min-width: 768px) {
-        .container {
+        @media (min-width: 768px) {
             max-width: 720px;
-        }
-    }
 
-    @media (min-width: 992px) {
-        .container {
+        }
+
+        @media (min-width: 992px) {
+
             max-width: 960px;
-        }
-    }
 
-    @media (min-width: 1200px) {
-        .container {
+        }
+
+        @media (min-width: 1200px) {
+
             max-width: 1140px;
+
         }
-    }
 
-    .hamburger {
-        color: #fff;
-        display: none; // TODO: BREAKPOINT FOR SMALLER SCREENS
+        .hamburger {
+            color: #fff;
+            display: none;
 
-        .icon {
-            background: green;
+            .icon {
+                background: green;
+            }
         }
-    }
 
-    .nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        width: 500px;
-        padding-left: 0;
-
-        .navItem {
-            color: red;
+        .nav {
             display: flex;
-            align-items: center;
-            height: 100%;
+            flex-direction: row;
+            justify-content: space-evenly;
+            width: 500px;
+            padding-left: 0;
 
-            .navLink {
+            .navItem {
+                color: red;
                 display: flex;
-                color: #fff;
-                font-weight: 500;
-                font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-                font-size: 14px;
-                text-decoration: none;
+                align-items: center;
+                height: 100%;
 
-                &:hover,
-                &.active {
-                    color: #bbb;
+                .navLink {
+                    display: flex;
+                    color: #fff;
+                    font-weight: 500;
+                    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+                    font-size: 14px;
+                    text-decoration: none;
+
+                    &:hover,
+                    &.active {
+                        color: #bbb;
+                    }
                 }
+            }
+        }
+
+        .logo {
+            align-self: center;
+
+            img {
+                height: 37px;
+                margin-top: 5px;
             }
         }
     }
 
-    .logo {
-        align-self: center;
-
-        img {
-            height: 37px;
-            margin-top: 5px;
-        }
-    }
 }
