--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -8,6 +8,10 @@
     }
 
     .motto {
-        font-size: 16px;
+        text-shadow: 0px 1px 1px #4d4d4d;
+        letter-spacing: 0.15rem;
+        font-style: italic;
+        font-size: 14px;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     }
 }
