--- a/client/common/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/common/components/Navigation/UserMenu/UserMenu.module.scss
@@ -1,63 +1,53 @@
 .root {
-    flex-grow: 1;
-    justify-content: flex-end;
+  flex-grow: 1;
+  justify-content: flex-end;
+  display: flex;
+
+  .container {
     display: flex;
 
-    .container {
-        display: flex;
-
-        .toggle {
-            display: flex;
-            flex-direction: row;
-            align-self: center;
-            justify-content: space-evenly;
-            color: #ffffff;
-            font-size: 18px;
-            text-decoration: none;
-            font-weight: bold;
-            cursor: hand;
-            // TODO: REPLACE WITH USER IMAGE / AVATAR
-
-        }
-
-        .menu {
-            background-color: #fff;
-            border-radius: 3px;
-            border: 1px solid #ccc;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
-            position: relative;
-            top: 45px;
-            right: 177px;
-            padding: 15px 15px 50px 15px;
-            height: 100%;
-            z-index: 100;
-
-
-            .divider {
-                display: block;
-                height: 20px;
-            }
-
-            .userName {
-                font-size: 16px;
-            }
-
-            .userEmail {
-                font-size: 12px;
-            }
-
-            .userDetail {
-                font-size: 12px;
-            }
-
-            .userSignOut {
-                font-size: 12px;
-            }
-        }
+    .toggle {
+      display: flex;
+      flex-direction: row;
+      align-self: center;
+      justify-content: space-evenly;
+      color: #ffffff;
+      font-size: 18px;
+      text-decoration: none;
+      font-weight: bold;
+      cursor: hand;
+      // TODO: REPLACE WITH USER IMAGE / AVATAR
     }
 
+    .menu {
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
+        Segoe UI Emoji;
+      background-color: #fff;
+      border-radius: 3px;
+      border: 1px solid #ccc;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+      position: relative;
+      top: 45px;
+      right: 177px;
+      padding: 15px 15px 50px 15px;
+      height: 100px;
+      z-index: 100;
 
+      .divider {
+        display: block;
+        height: 20px;
+      }
 
+      .userName {
+        font-size: 16px;
+      }
 
-
+      .userEmail,
+      .userDetail,
+      .userSignOut {
+        font-size: 12px;
+        margin: 8px 0 0 0;
+      }
+    }
+  }
 }
