--- a/client/common/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/common/components/Navigation/UserMenu/UserMenu.module.scss
@@ -1,39 +1,7 @@
 .root {
-    flex-grow: 1;
-    justify-content: flex-end;
-    display: flex;
-
-    .container {
-        display: flex;
-
-        .toggle {
-            display: flex;
-            align-self: center;
-            font-size: 18px;
-            text-decoration: none;
-        }
-
-        .menu {
-            background-color: #fff;
-            border-radius: 3px;
-            border: 1px solid #ccc;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
-            position: relative;
-            top: 45px;
-            right: 177px;
-            padding: 15px 15px 50px 15px;
-            height: 100%;
-            z-index: 100;
-
-
-            .divider {
-                display: block;
-                height: 20px;
-            }
-
-            .userName {
-                font-size: 16px;
-            }
+  flex-grow: 1;
+  justify-content: flex-end;
+  display: flex;
 
   .container {
     display: flex;
@@ -48,12 +16,9 @@
       text-decoration: none;
       font-weight: bold;
       cursor: hand;
-      // TODO: REPLACE WITH USER IMAGE / AVATAR
     }
 
     .menu {
-      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
-        Segoe UI Emoji;
       background-color: #fff;
       border-radius: 3px;
       border: 1px solid #ccc;
@@ -61,24 +26,46 @@
       position: relative;
       top: 45px;
       right: 177px;
-      padding: 15px 15px 50px 15px;
+      padding: 15px 0 50px 0;
       height: 100px;
       z-index: 100;
 
+      .header {
+        font-size: 15px;
+      }
+
       .divider {
         display: block;
-        height: 20px;
+        height: 0;
+        margin: 8px 0;
+        border-top: 1px solid #e1e4e8;
       }
 
-      .userName {
-        font-size: 16px;
-      }
-
-      .userEmail,
-      .userDetail,
-      .userSignOut {
+      .menuItem {
+        display: block;
+        color: #24292e;
         font-size: 12px;
-        margin: 8px 0 0 0;
+        padding: 4px 8px 4px 16px;
+        letter-spacing: 0.02rem;
+        font-weight: 400;
+
+        &.userName {
+          font-weight: 600;
+        }
+      }
+
+      a.menuItem {
+        color: inherit;
+        text-decoration: none;
+
+        &:hover,
+        &:active,
+        &:focus {
+          color: #fff;
+          text-decoration: none;
+          background-color: #CF5F00;
+          outline: none;
+        }
       }
     }
   }
