Adjustments to ProjectDetails

--- a/client/pages/Customers/CustomerDetails/CustomerDetails.module.scss
+++ b/client/pages/Customers/CustomerDetails/CustomerDetails.module.scss
@@ -9,6 +9,7 @@
     font-size: 14px;
   }
   .actions {
+    display: flex;
     margin: 10px 0 10px 0;
     .buttonContainer {
       margin: 0 5px 0 0;
