--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -1,8 +1,24 @@
 .root {
-  margin-top: 30px;
-  .container {
-    .row {
-      margin-bottom: 12px;
+  display: flex;
+  flex-direction: column;
+  .name {
+    font-weight: 500;
+    margin-bottom: 8px;
+  }
+  .description {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+  .actions {
+    display: flex;
+    margin: 10px 0 10px 0;
+    .buttonContainer {
+      margin: 0 5px 0 0;
+
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
     }
   }
 }
