--- a/client/pages/Timesheet/ProjectColumn/ResolveProjectModal/ResolveProjectModal.module.scss
+++ b/client/pages/Timesheet/ProjectColumn/ResolveProjectModal/ResolveProjectModal.module.scss
@@ -3,12 +3,14 @@
   width: 540px;
   min-width: 540px;
   max-width: 540px;
+  box-sizing: border-box;
 
   .title {
     font-size: 1.6em;
     margin: 0 0 12px 0;
   }
   .searchProject {
+    width: 95%;
     margin: 10px 0 0 0;
   }
 }
